# raccoon-survey

./: .coveragerc  .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  .stylelintrc.js  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  commitlint.config.js  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test.html
.github/: changelog-config.yml
.github/scripts/: update_package_lock.js  update_package_version.py  update_pyproject_version.py
.github/workflows/: changelog.yml  docs.yml  release.yml  tests.yml
docs/: make.bat
docs/API/: README.md
docs/CI/: CHANGELOG_CI.md  COMMIT_VALIDATION.md  PYTHON_LINTING.md  TESTS_WORKFLOW.md
docs/CI/CD/: COMMIT_VALIDATION.md
docs/Database/: MIGRATIONS.md  schema_db.md
docs/Security/: README.md
docs/Testing/: README.md
docs/source/: ci.rst  conf.py  core.rst  database.rst  extensions.rst  index.rst  middlewares.rst  models.rst  modules.rst  routes.rst  security_guide.rst  security_policy.rst  services.rst  testing.rst
docs/source/_static/: custom.css
docs/source/api/: openapi.rst
docs/source/guide/: create_surveys.rst  distribute_tokens.rst  faq.rst  generate_tokens.rst  index.rst  reports.rst  survey_metrics.rst
src/core/: __init__.py  app.py  config.py  openapi.json
src/core/database/: __init__.py  seed.py
src/core/database/migrations/: env.py
src/core/extensions/: scheduler.py
src/core/middlewares/: rbac.py  user_required.py
src/core/models/: __init__.py  audit_log.py  category.py  question.py  question_category.py  response.py  role.py  survey.py  survey_token.py  team.py  user.py
src/core/routes/: __init__.py  anonymous.py  auth.py  categories.py  docs.py  maintenance.py  metrics.py  questions.py  reports.py  roles.py  surveys.py  teams.py  tokens.py  users.py
src/core/services/: auth_service.py  categories_service.py  jwt_blocklist.py  metrics_service.py  questions_service.py  reports_service.py  responses_service.py  roles_service.py  surveys_service.py  teams_service.py  tokens_service.py  users_service.py
src/core/utils/: __init__.py
src/ui/docs/source/: api_conexion.rst  api_connection.rst  components.rst  conf.py  estructura_frontend.rst  index.rst  (+3 more)
src/ui/middlewares/: handle_global_errors.py
src/ui/routes/: pages.py
src/ui/templates/: dashboard.html  encuestas.html  index.html  inicio.html  login.html  resolver_encuesta.html  roles.html
test/: __init__.py  conftest.py
test/e2e/: conftest.py  test_anonymous_full_flow.py  test_team_summary_flow.py  test_tokens_export_flow.py
test/integration/: conftest.py  test_anonymous_api.py  test_categories_api.py  test_questions_api.py  test_roles_api.py  test_surveys_api.py  test_teams_api.py  test_tokens_api.py  test_users_api.py
test/unitests/: conftest.py  test_auth_service.py  test_jwt_blocklist.py  test_metrics_service.py  test_reports_service.py  test_tokens_service.py
test/utils/: __init__.py  helpers.py
(+53 files in other folders)
