[project]
name = "raccoon-survey"
version = "1.4.0"
description = "Anonymous survey platforms to measure the work environment"
readme = "README.md"
license = { text = "MIT" }
keywords = ["survey", "work environment", "anonymous"]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "typing>=3.10.0.0",
    "apscheduler>=3.10.4",
    "sphinx>=8.2.3",
    "sphinxcontrib-openapi>=0.8.4",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Ruff configuration for linting and formatting
[tool.ruff]
# Target Python 3.13+
target-version = "py313"

# Include src directory
include = ["src/**/*.py", "test/**/*.py"]

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
]

# Line length
line-length = 88

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "S101",  # Use of assert (common in tests)
    "T201",  # Print statements (allow for debugging)
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect line endings
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Tests can use more relaxed rules
"test/**/*.py" = ["S101", "T201", "N802"]

# __init__.py files can have unused imports
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["raccoon_survey"]
force-single-line = false
force-sort-within-sections = true
split-on-trailing-comma = true

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "test"]
known_first_party = ["raccoon_survey"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.13.0",
]
